--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trading Order Form</title>
+    <!-- AWS SDK -->
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1240.0.min.js"></script>
+    <!-- Your JavaScript file -->
     <script src="app.js"></script>
+    <!-- Optional: Your CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,36 +27,38 @@
         </div>
 
         <!-- Form Body -->
-        <div class="form-body">
+        <!-- Wrap in a form tag for proper submission handling -->
+        <form id="order-form" onsubmit="handleFormSubmit(event)">
             <h4>Intraday-Market</h4>
 
+            <!-- Quantity Field -->
             <div class="form-group">
                 <label for="quantity">Quantity (Lot: 1)</label>
-                <input type="number" id="quantity" class="form-control" placeholder="1">
+                <input type="number" id="quantity" class="form-control" placeholder="1" required>
             </div>
 
+            <!-- Price Field -->
             <div class="form-group">
                 <label for="price">Price (Tick: 0.01)</label>
-                <input type="number" id="price" class="form-control" placeholder="275.15">
+                <input type="number" id="price" class="form-control" placeholder="275.15" required>
             </div>
 
+            <!-- Order Options (Radio Buttons) -->
             <div class="form-options">
-                <label><input type="radio" name="orderOption" class="form-check-input" value="Market price"> Market price</label>
-                <label><input type="radio" name="orderOption" class="form-check-input" value="Trigger buy"> Trigger buy</label>
-                <label><input type="radio" name="orderOption" class="form-check-input" value="CO"> CO</label>
-                <label><input type="radio" name="orderOption" class="form-check-input" value="BO"> BO</label>
+                <label><input type="radio" name="orderOption" value="Market price" required> Market price</label>
+                <label><input type="radio" name="orderOption" value="Trigger buy"> Trigger buy</label>
+                <label><input type="radio" name="orderOption" value="CO"> CO</label>
+                <label><input type="radio" name="orderOption" value="BO"> BO</label>
             </div>
-        </div>
 
-        <!-- Footer Section -->
-        <div class="form-footer">
-            <button class="btn-add-funds">Add funds</button>
-            <button class="btn-buy" onclick="handleFormSubmit(event)">Buy 1 qty</button>
-        </div>
+            <!-- Footer Section -->
+            <div class="form-footer">
+                <button type="button" class="btn-add-funds">Add funds</button>
+                <!-- Use 'submit' for form submission -->
+                <button type="submit" class="btn-buy">Buy 1 qty</button>
+            </div>
+        </form>
     </div>
-
-    <!-- Link to your JavaScript file -->
-    
 
 </body>
 </html>
